--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,11 @@ version: '3.8'
 services:
   kong-database:
     image: postgres:13
-    restart: always
     environment:
       POSTGRES_USER: kong
       POSTGRES_DB: kong
-      POSTGRES_PASSWORD: kongpass
-    ports:
-      - "5432:5432"
-
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    
   kong-migrations:
     image: kong/kong-gateway:3.9.0.1
     depends_on:
@@ -19,9 +16,9 @@ services:
       KONG_DATABASE: postgres
       KONG_PG_HOST: kong-database
       KONG_PG_USER: kong
-      KONG_PG_PASSWORD: kongpass
+      KONG_PG_PASSWORD: ${POSTGRES_PASSWORD}
     command: kong migrations bootstrap
-
+    
   kong:
     image: kong/kong-gateway:3.9.0.1
     restart: always
@@ -32,14 +29,12 @@ services:
       KONG_DATABASE: postgres
       KONG_PG_HOST: kong-database
       KONG_PG_USER: kong
-      KONG_PG_PASSWORD: kongpass
+      KONG_PG_PASSWORD: ${POSTGRES_PASSWORD}
       KONG_PROXY_ACCESS_LOG: /dev/stdout
       KONG_ADMIN_ACCESS_LOG: /dev/stdout
       KONG_PROXY_ERROR_LOG: /dev/stderr
       KONG_ADMIN_ERROR_LOG: /dev/stderr
-      KONG_ADMIN_LISTEN: 0.0.0.0:8001
-      KONG_ADMIN_GUI_URL: http://localhost:8002
-    ports:
-      - "8000:8000"
-      - "8001:8001"
-      - "8002:8002"
+      KONG_ADMIN_LISTEN: 0.0.0.0:${PORT}
+      KONG_PROXY_LISTEN: 0.0.0.0:${PORT}
+      KONG_ADMIN_GUI_URL: ${RAILWAY_STATIC_URL}
+      PORT: ${PORT}
