--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,81 @@
-version: '3.8'
+version: '2.1'
 
 services:
-  kong-database:
-    image: postgres:13
+  #######################################
+  # Postgres: Kong Database
+  #######################################
+  kong-db:
+    image: postgres:14-alpine
+    container_name: kong-db
+    networks:
+      - kong-net
     environment:
-      POSTGRES_USER: kong
       POSTGRES_DB: kong
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    
+      POSTGRES_USER: kong
+      POSTGRES_PASSWORD: kong
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "kong"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: on-failure
+  #######################################
+  # Kong database migration
+  #######################################
   kong-migrations:
-    image: kong/kong-gateway:3.9.0.1
-    depends_on:
-      - kong-database
-    environment:
-      KONG_DATABASE: postgres
-      KONG_PG_HOST: kong-database
-      KONG_PG_USER: kong
-      KONG_PG_PASSWORD: ${POSTGRES_PASSWORD}
+    image: kong/kong-gateway:3.2.1.0
     command: kong migrations bootstrap
-    
-  kong:
-    image: kong/kong-gateway:3.9.0.1
-    restart: always
+    container_name: kong-migrations
+    networks:
+      - kong-net
     depends_on:
-      - kong-database
-      - kong-migrations
+      kong-db:
+        condition: service_healthy
     environment:
       KONG_DATABASE: postgres
-      KONG_PG_HOST: kong-database
+      KONG_PG_HOST: kong-db
+      KONG_PG_DATABASE: kong
       KONG_PG_USER: kong
-      KONG_PG_PASSWORD: ${POSTGRES_PASSWORD}
-      KONG_PROXY_ACCESS_LOG: /dev/stdout
-      KONG_ADMIN_ACCESS_LOG: /dev/stdout
-      KONG_PROXY_ERROR_LOG: /dev/stderr
-      KONG_ADMIN_ERROR_LOG: /dev/stderr
-      KONG_ADMIN_LISTEN: 0.0.0.0:${PORT}
-      KONG_PROXY_LISTEN: 0.0.0.0:${PORT}
-      KONG_ADMIN_GUI_URL: ${RAILWAY_STATIC_URL}
-      PORT: ${PORT}
+      KONG_PG_PASSWORD: kong
+    restart: on-failure
+  #######################################
+  # Kong: The API Gateway
+  #######################################
+  kong-ce:
+    image: kong/kong-gateway:3.2.1.0
+    container_name: kong
+    networks:
+      - kong-net
+    restart: on-failure
+    depends_on:
+      kong-db:
+        condition: service_healthy
+    environment:
+      KONG_DATABASE: postgres
+      KONG_PG_HOST: kong-db
+      KONG_PG_DATABASE: kong
+      KONG_PG_USER: kong
+      KONG_PG_PASSWORD: kong
+      KONG_PROXY_LISTEN: 0.0.0.0:8000, 0.0.0.0:8443 ssl
+      KONG_ADMIN_LISTEN: 0.0.0.0:8001, 0.0.0.0:8444 ssl
+
+     # KONG_SSL: "on"
+     # KONG_SSL_CERT: /certs/domain.crt
+     # KONG_SSL_CERT_KEY: /certs/domain.key
+     # KONG_LICENSE_DATA: 'Add License Key'
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://kong-ce:8001"]
+      interval: 5s
+      timeout: 2s
+      retries: 10
+
+    ports:
+      - "8000-8001:8000-8001/tcp"
+      - "8443:8443"
+      - "8444:8444"
+
+  #volumes:
+  ##    - ./certs:/certs
+networks:
+  kong-net:
+    external: true
