--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,81 +1,64 @@
-version: '2.1'
+version: '3.8'
 
 services:
-  #######################################
-  # Postgres: Kong Database
-  #######################################
-  kong-db:
-    image: postgres:14-alpine
-    container_name: kong-db
+  kong-database:
+    image: postgres:13
+    container_name: kong-database
+    restart: always
     networks:
       - kong-net
     environment:
-      POSTGRES_DB: kong
       POSTGRES_USER: kong
-      POSTGRES_PASSWORD: kong
-    healthcheck:
-      test: ["CMD", "pg_isready", "-U", "kong"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    restart: on-failure
-  #######################################
-  # Kong database migration
-  #######################################
-  kong-migrations:
-    image: kong/kong-gateway:3.2.1.0
-    command: kong migrations bootstrap
-    container_name: kong-migrations
-    networks:
-      - kong-net
-    depends_on:
-      kong-db:
-        condition: service_healthy
-    environment:
-      KONG_DATABASE: postgres
-      KONG_PG_HOST: kong-db
-      KONG_PG_DATABASE: kong
-      KONG_PG_USER: kong
-      KONG_PG_PASSWORD: kong
-    restart: on-failure
-  #######################################
-  # Kong: The API Gateway
-  #######################################
-  kong-ce:
-    image: kong/kong-gateway:3.2.1.0
-    container_name: kong
-    networks:
-      - kong-net
-    restart: on-failure
-    depends_on:
-      kong-db:
-        condition: service_healthy
-    environment:
-      KONG_DATABASE: postgres
-      KONG_PG_HOST: kong-db
-      KONG_PG_DATABASE: kong
-      KONG_PG_USER: kong
-      KONG_PG_PASSWORD: kong
-      KONG_PROXY_LISTEN: 0.0.0.0:8000, 0.0.0.0:8443 ssl
-      KONG_ADMIN_LISTEN: 0.0.0.0:8001, 0.0.0.0:8444 ssl
-
-     # KONG_SSL: "on"
-     # KONG_SSL_CERT: /certs/domain.crt
-     # KONG_SSL_CERT_KEY: /certs/domain.key
-     # KONG_LICENSE_DATA: 'Add License Key'
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://kong-ce:8001"]
-      interval: 5s
-      timeout: 2s
-      retries: 10
-
+      POSTGRES_DB: kong
+      POSTGRES_PASSWORD: kongpass
     ports:
-      - "8000-8001:8000-8001/tcp"
-      - "8443:8443"
-      - "8444:8444"
+      - "5433:5433" # Cambiado a 5433 para evitar conflictos locales
+    volumes:
+      - kong_data:/var/lib/postgresql/data
 
-  #volumes:
-  ##    - ./certs:/certs
+  kong-migrations:
+    image: kong:3.9.0
+    depends_on:
+      - kong-database
+    networks:
+      - kong-net
+    environment:
+      KONG_DATABASE: postgres
+      KONG_PG_HOST: kong-database
+      KONG_PG_USER: kong
+      KONG_PG_PASSWORD: kongpass
+    command: kong migrations bootstrap
+    restart: on-failure
+
+  kong-gateway:
+    image: kong:3.9.0
+    container_name: kong-gateway
+    depends_on:
+      - kong-migrations
+    networks:
+      - kong-net
+    environment:
+      KONG_DATABASE: postgres
+      KONG_PG_HOST: kong-database
+      KONG_PG_USER: kong
+      KONG_PG_PASSWORD: kongpass
+      KONG_PROXY_ACCESS_LOG: /dev/stdout
+      KONG_ADMIN_ACCESS_LOG: /dev/stdout
+      KONG_PROXY_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_LISTEN: 0.0.0.0:8001, 0.0.0.0:8444 ssl
+      KONG_ADMIN_GUI_URL: http://localhost:8002
+    ports:
+      - "8000:8000"
+      - "8443:8443"
+      - "127.0.0.1:8001:8001"
+      - "127.0.0.1:8002:8002"
+      - "127.0.0.1:8444:8444"
+    restart: always
+
 networks:
   kong-net:
-    external: true
+    driver: bridge
+
+volumes:
+  kong_data:
